分离出窗口抓取设置

--- a/GenshinSpider/config.ini
+++ b/GenshinSpider/config.ini
@@ -1,6 +1,11 @@
-;百度ocr相关
 [api]
-access_token=*********
+access_token=**********
 accurate_url=https://aip.baidubce.com/rest/2.0/ocr/v1/accurate_basic
 general_url=https://aip.baidubce.com/rest/2.0/ocr/v1/general_basic
 use=general_url
+[grasp_setting]
+window_title=原神
+left=0.67
+top=0.15
+right=0.936
+bottom=0.846
